Fixed bug #25359 (array_multisort() doesn't work in a function if array is global or reference)