ext/standard/basic_functions.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: basic_functions.c,v 1.726 2005/08/09 14:40:59 iliaa Exp $ */
+/* $Id: basic_functions.c,v 1.727 2005/08/10 12:02:14 dmitry Exp $ */
 
 #include "php.h"
 #include "php_streams.h"
@@ -140,6 +140,10 @@ static
 		ZEND_ARG_PASS_INFO(1)
 		ZEND_ARG_PASS_INFO(1)
 		ZEND_ARG_PASS_INFO(1)
+	ZEND_END_ARG_INFO()
+
+static
+	ZEND_BEGIN_ARG_INFO(all_args_prefer_ref, ZEND_SEND_PREFER_REF)
 	ZEND_END_ARG_INFO()
 
 typedef struct _php_shutdown_function_entry {
@@ -449,7 +453,7 @@ function_entry basic_functions[] = {
 	PHP_FE(call_user_func_array,											NULL)
 	PHP_FE(call_user_method,		second_arg_force_ref)
 	PHP_FE(call_user_method_array,	second_arg_force_ref)
-	PHP_FE(serialize,														NULL)															
+	PHP_FE(serialize,														NULL)
 	PHP_FE(unserialize,														NULL)
 
 	PHP_FE(var_dump,														NULL)
@@ -762,7 +766,7 @@ function_entry basic_functions[] = {
 	PHP_FE(compact,															NULL)
 	PHP_FE(array_fill,														NULL)
 	PHP_FE(range,															NULL)
-	PHP_FE(array_multisort,													NULL)
+	PHP_FE(array_multisort,													all_args_prefer_ref)
 	PHP_FE(array_push,				first_arg_force_ref)
 	PHP_FE(array_pop,				first_arg_force_ref)
 	PHP_FE(array_shift,				first_arg_force_ref)
